# municipal-hazard-api

./: .env.example  .gitignore  README.md  pyproject.toml  system-structure.drawio
alembic/: env.py
alembic/versions/: 32775988c530_add_reports_table.py  6896c8ca7da2_crate_hazard_report_table.py  70a1fd609b42_basic_migration.py  8f0e674c4fb9_add_report.py  b8f518bbbbf2_fix_upload_image.py
app/: main.py
app/api/: __init__.py  deps.py  router.py  schemas.py
app/api/v1/: __init__.py  auth.py  hazard_report.py  report.py  router.py
app/api/v1/schemas/: hazard_report.py  user.py
app/core/: config.py  security.py
app/db/: session.py
app/db/models/: __init__.py  base_model.py  hazard_report.py  report.py  user.py
frontend/: .env.example  index.html  package-lock.json  package.json  welcome.html
frontend/src/: App.css  App.jsx
